--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   update-data:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
     
     steps:
     - name: Depoyu Çek
